# elixireum

./: .gitignore  123.txt  Method | GasUsed.md  README.md  abi.json  demo.py  mix.exs  out.txt  out.yul  playground  results.txt  std.json  test.json
annotation_template/: ref.bib  thesis.tex
annotation_template/chapters/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex
examples/: erc_20.exm  erc_721.exm  storage.exm  test.exm  test.exs  test_if.exm
examples/sol/: array.sol  constructor.sol  storage.sol
examples/sol/output/: Constructor.yul  Storage.yul
examples/vy/: functions.vy
latex/: ref.bib  thesis.tex
latex/chapters/: abstract.tex  appex.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex
lib/: blockchain.ex  elixireum.ex  test.ex  typespec.ex  yul_function.ex
lib/blockchain/: address.ex  event.ex  storage.ex  type.ex  types.ex
lib/elixireum/: abi_generator.ex  auxiliary_node.ex  compiler.ex  compiler_state.ex  contract.ex  event.ex  function.ex  functions.ex  typespec.ex  variable.ex  yul_compiler.ex  yul_node.ex
lib/elixireum/compiler/: calldata.ex  return.ex
lib/elixireum/yul/: arithmetic.ex  comparison.ex  (+3 more)
lib/yul/: arithmetic.ex  comparison.ex  std_function.ex  utils.ex
test/: elixireum_test.exs
test/contracts/: ERC20.exm  calldata_return.exm  constructor.exm  events.exm  playground.exm  storage.exm
test/test_suit/: benchmark.py  main.py  pyproject.toml  test_calldata_return.py  test_constructor.py  test_erc_20.py  test_erc_721.py  test_events.py  test_storage.py
(+8 files in other folders)
